cmake_minimum_required(VERSION 3.22.1)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(Tut1)
add_executable(Tut1 Tut1.cpp)


project(Tut7)
add_executable(Tut7 Tut7.cpp)

project(Tut12)
add_executable(Tut12 Tut12.cpp)

project(Tut13)
add_executable(Tut13 Tut13.cpp)

project(Tut14)
add_executable(Tut14 Tut14.cpp)

project(Tut15)
add_executable(Tut15 Tut15.cpp)


project(Tut17)
add_executable(Tut17 Tut17.cpp)

project(Tut19)
add_executable(Tut19 Tut19.cpp)

project(Tut21)
add_executable(Tut21 Tut21.cpp)

project(Tut22)
add_executable(Tut22 Tut22.cpp)

project(Tut23)
add_executable(Tut23 Tut23.cpp)


project(Tut24)
add_executable(Tut24 Tut24.cpp)

project(Tut25)
add_executable(Tut25 Tut25.cpp)

project(Tut25b)
add_executable(Tut25b Tut25b.cpp)

project(Tut26)
add_executable(Tut26 Tut26.cpp)

project(Tut27)
add_executable(Tut27 Tut27.cpp)

project(Tut28)
add_executable(Tut28 Tut28.cpp)

project(Tut28b)
add_executable(Tut28b Tut28b.cpp)

project(Tut29)
add_executable(Tut29 Tut29.cpp)


project(Tut30)
add_executable(Tut30 Tut30.cpp)

project(Tut30b)
add_executable(Tut30b Tut30b.cpp)

project(Tut31)
add_executable(Tut31 Tut31.cpp)

project(Tut32)
add_executable(Tut32 Tut32.cpp)

project(Tut33)
add_executable(Tut33 Tut33.cpp)

project(Tut34)
add_executable(Tut34 Tut34.cpp)

project(Tut35)
add_executable(Tut35 Tut35.cpp)

project(Tut37)
add_executable(Tut37 Tut37.cpp)

project(Tut38)
add_executable(Tut38 Tut38.cpp)

project(Tut38_private)
add_executable(Tut38_private Tut38_private.cpp)


project(Tut39)
add_executable(Tut39 Tut39.cpp)

project(Tut40)
add_executable(Tut40 Tut40.cpp)

