cmake_minimum_required(VERSION 3.22.1)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# /home/trec/WorkRaj/Coding_Tutorials/

# Change the default directory for built executables
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/HarryYoutubeTut)

project(Tut1)
add_executable(Tut1 HarryYoutubeTut/Tut1.cpp)


project(Tut7)
add_executable(Tut7 HarryYoutubeTut/Tut7.cpp)

project(Tut12)
add_executable(Tut12 HarryYoutubeTut/Tut12.cpp)

project(Tut13)
add_executable(Tut13 HarryYoutubeTut/Tut13.cpp)

project(Tut14)
add_executable(Tut14 HarryYoutubeTut/Tut14.cpp)

project(Tut15)
add_executable(Tut15 HarryYoutubeTut/Tut15.cpp)


project(Tut17)
add_executable(Tut17 HarryYoutubeTut/Tut17.cpp)

project(Tut19)
add_executable(Tut19 HarryYoutubeTut/Tut19.cpp)

project(Tut21)
add_executable(Tut21 HarryYoutubeTut/Tut21.cpp)

project(Tut22)
add_executable(Tut22 HarryYoutubeTut/Tut22.cpp)

project(Tut23)
add_executable(Tut23 HarryYoutubeTut/Tut23.cpp)


project(Tut24)
add_executable(Tut24 HarryYoutubeTut/Tut24.cpp)

project(Tut25)
add_executable(Tut25 HarryYoutubeTut/Tut25.cpp)

project(Tut25b)
add_executable(Tut25b HarryYoutubeTut/Tut25b.cpp)

project(Tut26)
add_executable(Tut26 HarryYoutubeTut/Tut26.cpp)

project(Tut27)
add_executable(Tut27 HarryYoutubeTut/Tut27.cpp)

project(Tut28)
add_executable(Tut28 HarryYoutubeTut/Tut28.cpp)

project(Tut28b)
add_executable(Tut28b HarryYoutubeTut/Tut28b.cpp)

project(Tut29)
add_executable(Tut29 HarryYoutubeTut/Tut29.cpp)


project(Tut30)
add_executable(Tut30 HarryYoutubeTut/Tut30.cpp)

project(Tut30b)
add_executable(Tut30b HarryYoutubeTut/Tut30b.cpp)

project(Tut31)
add_executable(Tut31 HarryYoutubeTut/Tut31.cpp)

project(Tut32)
add_executable(Tut32 HarryYoutubeTut/Tut32.cpp)

project(Tut33)
add_executable(Tut33 HarryYoutubeTut/Tut33.cpp)

project(Tut34)
add_executable(Tut34 HarryYoutubeTut/Tut34.cpp)

project(Tut35)
add_executable(Tut35 HarryYoutubeTut/Tut35.cpp)

project(Tut37)
add_executable(Tut37 HarryYoutubeTut/Tut37.cpp)

project(Tut38)
add_executable(Tut38 HarryYoutubeTut/Tut38.cpp)

project(Tut38_private)
add_executable(Tut38_private HarryYoutubeTut/Tut38_private.cpp)


project(Tut39)
add_executable(Tut39 HarryYoutubeTut/Tut39.cpp)

project(Tut40)
add_executable(Tut40 HarryYoutubeTut/Tut40.cpp)

project(Tut41)
add_executable(Tut41 HarryYoutubeTut/Tut41.cpp)

project(Tut42)
add_executable(Tut42 HarryYoutubeTut/Tut42.cpp)

project(Tut43)
add_executable(Tut43 HarryYoutubeTut/Tut43.cpp)


project(Tut45)
add_executable(Tut45 HarryYoutubeTut/Tut45.cpp)

project(Tut48)
add_executable(Tut48 HarryYoutubeTut/Tut48.cpp)

project(Tut49)
add_executable(Tut49 HarryYoutubeTut/Tut49.cpp)

project(Tut50)
add_executable(Tut50 HarryYoutubeTut/Tut50.cpp)

project(Tut51)
add_executable(Tut51 HarryYoutubeTut/Tut51.cpp)

project(Tut52)
add_executable(Tut52 HarryYoutubeTut/Tut52.cpp)

project(Tut53)
add_executable(Tut53 HarryYoutubeTut/Tut53.cpp)

project(Tut54)
add_executable(Tut54 HarryYoutubeTut/Tut54.cpp)

project(Tut55)
add_executable(Tut55 HarryYoutubeTut/Tut55.cpp)

project(Tut56)
add_executable(Tut56 HarryYoutubeTut/Tut56.cpp)

project(Tut57)
add_executable(Tut57 HarryYoutubeTut/Tut57.cpp)

project(Tut58)
add_executable(Tut58 HarryYoutubeTut/Tut58.cpp)

project(Tut60)
add_executable(Tut60 HarryYoutubeTut/Tut60.cpp)


project(Tut61)
add_executable(Tut61 HarryYoutubeTut/Tut61.cpp)

project(Tut62)
add_executable(Tut62 HarryYoutubeTut/Tut62.cpp)

project(Tut64)
add_executable(Tut64 HarryYoutubeTut/Tut64.cpp)

project(Tut65)
add_executable(Tut65 HarryYoutubeTut/Tut65.cpp)

project(Tut66)
add_executable(Tut66 HarryYoutubeTut/Tut66.cpp)

project(Tut67)
add_executable(Tut67 HarryYoutubeTut/Tut67.cpp)

project(Tut68)
add_executable(Tut68 HarryYoutubeTut/Tut68.cpp)

project(Tut71)
add_executable(Tut71 HarryYoutubeTut/Tut71.cpp)

project(Tut72)
add_executable(Tut72 HarryYoutubeTut/Tut72.cpp)


set(Eigen3_DIR /home/trec/WorkRaj/Coding_Tutorials/eigen)

project (EigenTut1)
# Set default directory for built executables
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Eigen)
find_package (Eigen3 3.4 REQUIRED)
 
add_executable (EigenTut1 EigenTut/EigenTut1.cpp)
target_link_libraries (EigenTut1 Eigen3::Eigen)

project (EigenTut2)
 
find_package (Eigen3 3.4 REQUIRED)
 
add_executable (EigenTut2 EigenTut/EigenTut2.cpp)
target_link_libraries (EigenTut2 Eigen3::Eigen)

project (EigenTut3)
 
find_package (Eigen3 3.4 REQUIRED)
 
add_executable (EigenTut3 EigenTut/EigenTut3.cpp)
target_link_libraries (EigenTut3 Eigen3::Eigen)


# Change the default directory for built executables
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/ThreadTut)

project(ThreadTut1)
add_executable(ThreadTut1 ThreadTut/ThreadTut1.cpp)


project(ThreadTut2)
add_executable(ThreadTut2 ThreadTut/ThreadTut2.cpp)


project(ThreadTut3)
add_executable(ThreadTut3 ThreadTut/ThreadTut3.cpp)


project(ThreadTut4)
add_executable(ThreadTut4 ThreadTut/ThreadTut4.cpp)


project(ThreadTut5)
add_executable(ThreadTut5 ThreadTut/ThreadTut5.cpp)


project(ThreadTut6)
add_executable(ThreadTut6 ThreadTut/ThreadTut6.cpp)

project(ThreadTut7)
add_executable(ThreadTut7 ThreadTut/ThreadTut7.cpp)

# Change the default directory for built executables
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/FunctorsTut)

project(FunctorsTut1)
add_executable(FunctorsTut1 FunctorsTut/FunctorsTut1.cpp)

project(FunctorsTut2)
add_executable(FunctorsTut2 FunctorsTut/FunctorsTut2.cpp)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/LambdaFunTut)

project(LambdaFunTut1)
add_executable(LambdaFunTut1 LambdaFunTut/LambdaFunTut1.cpp)

project(LambdaFunTut2)
add_executable(LambdaFunTut2 LambdaFunTut/LambdaFunTut2.cpp)

# Change the default directory for built executables
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/SocketTut)

project(Socket_Server1)
add_executable(Socket_Server1 SocketTut/Socket_Server1.cpp)

project(Socket_Client1)
add_executable(Socket_Client1 SocketTut/Socket_Client1.cpp)


project(Socket_Server2)
add_executable(Socket_Server2 SocketTut/Socket_Server2.cpp)

# Change the default directory for built executables
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/MiscellaneousTut)

project(NamespaceTut1)
add_executable(NamespaceTut1 MiscellaneousTut/NamespaceTut1.cpp)


project(DataTransferTut)
add_executable(DataTransferTut MiscellaneousTut/DataTransferTut.cpp)

project(iterator_tut1)
add_executable(iterator_tut1 MiscellaneousTut/iterator_tut1.cpp)



# Change the default directory for built executables
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/SmartPointersTut)

project(SmartPointers1)
add_executable(SmartPointers1 SmartPointersTut/SmartPointers1.cpp)

project(SmartPointers2)
add_executable(SmartPointers2 SmartPointersTut/SmartPointers2.cpp)

project(SmartPointers3)
add_executable(SmartPointers3 SmartPointersTut/SmartPointers3.cpp)

project(SmartPointers4)
add_executable(SmartPointers4 SmartPointersTut/SmartPointers4.cpp)

project(SmartPointers5)
add_executable(SmartPointers5 SmartPointersTut/SmartPointers5.cpp)

# Chaneg the default directory for built executables
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/GDBTut)

project(GDBTut1)
add_executable(GDBTut1 GDBTut/GDBTut1.cpp)

project(GDBTut2)
add_executable(GDBTut2 GDBTut/GDBTut2.cpp)

project(GDBTut3)
add_executable(GDBTut3 GDBTut/GDBTut3.cpp)

project(GDBTut4)
add_executable(GDBTut4 GDBTut/GDBTut4.cpp)

# Change the default directory for built executables
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})